force-app/main/default/objects/Playlist_Song_Junction__c/Playlist_Song_Junction__c.object-meta.xml
<CustomObject>
    <label>Playlist Song Junction</label>
    <nameField>
        <displayFormat>TRACK-{0000}</displayFormat>
        <label>Playlist Song Junction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Playlist Song Junctions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>