force-app/main/default/objects/Playlist_Song_Junction__c/fields/Genre__c.field-meta.xml
<CustomField>
    <fullName>Genre__c</fullName>
    <externalId>true</externalId>
    <label>Genre</label>
    <length>255</length>
    <type>Text</type>
</CustomField>