force-app/main/default/objects/Playlist_Song_Junction__c/fields/Genre_From_Playlist__c.field-meta.xml
<CustomField>
    <fullName>Genre_From_Playlist__c</fullName>
    <formula>Playlist__r.Genres__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Genre From Playlist</label>
    <type>Text</type>
</CustomField>