force-app/main/default/objects/Playlist_Song_Junction__c/fields/Playlist__c.field-meta.xml
<CustomField>
    <fullName>Playlist__c</fullName>
    <label>Playlist</label>
    <referenceTo>Playlist__c</referenceTo>
    <relationshipLabel>Songs</relationshipLabel>
    <relationshipName>Playlist_Songs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>