force-app/main/default/objects/Playlist_Song_Junction__c/fields/Song__c.field-meta.xml
<CustomField>
    <fullName>Song__c</fullName>
    <label>Song</label>
    <referenceTo>Song__c</referenceTo>
    <relationshipLabel>Playlists</relationshipLabel>
    <relationshipName>Song_Playlists</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>